[package]
name = "advent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
regex = "1.7.0"
md5 = "0.7.0"
itertools = "0.10.5"
json = "0.12.4"
multimap = "0.8.3"
