[package]
name = "advent"
version = "0.1.0"
edition = "2021"

[lints.clippy]
needless_range_loop = "allow"

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
regex = { version = "1.7.0", features = [] }
md5 = { version = "0.7.0" }
itertools = { version = "0.13.0" }
json = { version = "0.12.4" }
multimap = { version = "0.10.0" }
num-bigint = { version = "0.4.3" }
num-integer = { version = "0.1.45" }
num-traits = { version = "0.2.15" }
eval = { version = "0.4.3" }
prime_factorization = { version = "1.0.4" }
